[FIX]:No horizontal scrollbar on mobile

--- a/src/pages/Home/components/Tasks/index.scss
+++ b/src/pages/Home/components/Tasks/index.scss
@@ -18,7 +18,7 @@ ul{
     overflow-y: scroll;
 }
 .tasks__button{
-    width: 90%;
+    width: 80%;
 }
 
 @media only screen and (min-width: $mobile-lg){
